2017.9/_sources/plugins/available/feature-table/rarefy.txt
rarefy: Rarefy table
====================

.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime feature-table rarefy [OPTIONS]

     Subsample frequencies from all samples without replacement so that the sum
     of frequencies in each sample is equal to sampling-depth.

   Options:
     --i-table PATH              Artifact: FeatureTable[Frequency]  [required]
                                 The feature table to be rarefied.
     --p-sampling-depth INTEGER  [required]
                                 The total frequency that each sample
                                 should be rarefied to. Samples where the sum of
                                 frequencies is less than the sampling depth will
                                 be not be included in the resulting table.
     --o-rarefied-table PATH     Artifact: FeatureTable[Frequency] [required if
                                 not passing --output-dir]
                                 The resulting rarefied
                                 feature table.
     --output-dir DIRECTORY      Output unspecified results to a directory
     --cmd-config PATH           Use config file for command options
     --verbose                   Display verbose output to stdout and/or stderr
                                 during execution of this action.  [default:
                                 False]
     --quiet                     Silence output if execution is successful
                                 (silence is golden).  [default: False]
     --help                      Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>Rarefy table

   Subsample frequencies from all samples without replacement so that the sum
   of frequencies in each sample is equal to sampling-depth.

   Parameters
   ----------
   table : FeatureTable[Frequency]
       The feature table to be rarefied.
   sampling_depth : Int
       The total frequency that each sample should be rarefied to. Samples
       where the sum of frequencies is less than the sampling depth will be
       not be included in the resulting table.

   Returns
   -------
   rarefied_table : FeatureTable[Frequency]
       The resulting rarefied feature table.</pre>
       </div>
     </div>
   </div>